# suews-hackathon-pam24

analysis/: suews_contrast_analysis.py
data/uda-city-hackathon/: .gitignore  README.md  agent_manifest.yml  neighbourhoods.yml  pyproject.toml  risk_bridge.md  risk_bridge.py  scenarios.yml  socioeconomic.csv  uda-city.yml
data/uda-city-hackathon/forcing/future_hot_humid/: UDA_2024_data_60.txt
data/uda-city-hackathon/forcing/present_hot_humid/: UDA_2024_data_60.txt
data/uda-city-hackathon/scripts/: check_schema_drift.py  smoke_test.py
data/uda-city-hackathon/tests/: test_physics_lock.py  test_risk_bridge.py
docs/: analysis_summary.json  critical_heat_risk_zones.csv  diurnal_deltas_high_risk_zone.csv  energy_balance_landcover_zones.csv  heat_risk_matrix.csv  hourly_deltas_high_risk_zone.csv  hourly_fluxes_t2_present_future.csv  index.html  index.md  landcover_zone_summary.csv  meteorology_summary.csv  risk_zone_summary.csv  seasonal_data_coverage_high_risk_zone.csv  seasonal_diurnal_flux_deltas_high_risk_zone.csv  seasonal_diurnal_t2_high_risk_zone.csv  seasonal_hourly_deltas_high_risk_zone.csv
docs/assets/css/: style.scss
transcripts/: README.md  full-session-transcript-2026-06-24.md  prompt-history-2026-06-24.md  setup-session-2026-06-24.md
